--- a/apps/npro/admin/src/app/app.component.html
+++ b/apps/npro/admin/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<npro-header></npro-header>
 <!-- main app container -->
 <div class="jumbotron">
     <div class="container">
@@ -5,17 +7,9 @@
             <div class="col-sm-6 offset-sm-3">
                 <npro-alert></npro-alert>
                 <router-outlet></router-outlet>
+
             </div>
         </div>
     </div>
 </div>
-
-<!-- credits -->
-<div class="text-center">
-    <p>
-        <a href="http://jasonwatmore.com/post/2018/05/16/angular-6-user-registration-and-login-example-tutorial" target="_top">Angular 6 User Registration and Login Example & Tutorial</a>
-    </p>
-    <p>
-        <a href="http://jasonwatmore.com" target="_top">JasonWatmore.com</a>
-    </p>
-</div>
+<npro-footer></npro-footer>
